# tokio-rest-api-example

./: Cargo.toml  user.json
src/: db.rs  entities.rs  errors.rs  main.rs  routes.rs
src/resources/: schema.sql
