[package]
name = "tokio-rest-api"
version = "0.1.0"
authors = ["Dima Dermanskyi <dmytro.dermanskyi@walkme.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
